--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         
         <div class="links">
             <a href="index.html">Owner Dashboard</a>
-            <a href="customer.html">Customer Menu</a>
+            <a href="customer.html">Order Menu</a>
             <a href="orders.html">Orders Management</a>
         </div>
 
