Update Owner Dashboard link to index2.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>Welcome! Choose where you want to go:</p>
         
         <div class="links">
-            <a href="index.html">Owner Dashboard</a>
+            <a href="index2.html">Owner Dashboard</a>
             <a href="customer.html">Order Menu</a>
             <a href="orders.html">Orders Management</a>
         </div>
